@@ -1,3 +1,8 @@
+Thu Jan 07 17:20:30 2021  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/mpwrap.c, src/lexer.l, src/compil.c: Check for errors whenn
+	  setting integer and reject the parse.
+
 Wed Dec 16 13:53:33 2020  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/genius-readline-helper.c: fix warning by using the right list
